--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Klee+One:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
 html,
 body {
   padding: 0;
@@ -10,7 +12,274 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul {
+  list-style: none !important;
+}
+li a {
+  color: inherit;
+  text-decoration: none;
+}
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+/* navbar */
+.navp {
+  position: sticky !important;
+
+  top: 0px;
+  width: 100%;
+  height: 100px;
+
+  z-index: 1;
+}
+.nav {
+  background-color: #efc7c2;
+}
+.navitems {
+  /* justify-content: center !important; */
+  align-items: center !important;
+  margin: 0 6.5vw !important;
+  padding-bottom: 0 !important;
+  color: #071013 !important;
+  font-family: "Klee One", cursive;
+}
+.logo {
+  padding: 0 !important;
+  margin-top: 2.5px !important;
+}
+
+/* top rest */
+
+.bg-image {
+  background-image: url("../public/bg2.jpg");
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+}
+.bg-container {
+  position: relative;
+}
+.title {
+  margin: 300px;
+  min-width: 500px;
+  min-height: 500px;
+  margin-left: 0.45%;
+}
+.title h2 {
+  font-family: "Dancing Script", cursive;
+  font-size: 7rem;
+  width: 50vw;
+  font-weight: 700;
+  line-height: normal;
+  color: #efc7c2;
+  letter-spacing: 7px;
+}
+.title p {
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  color: #071013;
+}
+.btn-custom {
+  background-color: #071013;
+  color: #efc7c2;
+}
+.btn-custom:hover {
+  background-color: #efc7c2;
+}
+
+/* section-heading */
+.sectionh {
+  margin: 35px auto;
+  justify-content: center;
+  align-items: center !important;
+}
+
+.sectionh h1 {
+  color: #071013;
+  font-family: "Dancing Script", cursive;
+  font-size: 5.5rem;
+}
+
+.sectionh p {
+  color: #071013;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.4rem;
+}
+
+/* features  */
+.container-fluid {
+  background-color: #efc7c2;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+}
+.main {
+  height: 50vh;
+  justify-content: space-between;
+}
+.sectionright {
+  padding-left: 3.5%;
+}
+
+.sectionright p {
+  font-weight: 600;
+}
+.sectionright li {
+  font-family: "Klee One", cursive;
+}
+
+.formore:hover {
+  color: #071013;
+  font-family: "Klee One", cursive;
+}
+.formore {
+  font-family: "Klee One", cursive;
+
+  margin-left: 20px !important;
+  border: 1px solid #071013;
+}
+.workflow {
+  display: flex;
+  flex-direction: column;
+  background-color: #efc7c2;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.emailparent {
+  display: flex;
+  flex-direction: column;
+  background-color: #071013;
+  align-items: center;
+  justify-content: center;
+}
+.form {
+  margin-top: 55px;
+}
+.emailbutton {
+  color: #efc7c2;
+  font-family: "Klee One", cursive;
+  border: 1px solid #efc7c2;
+}
+.formore {
+  font-family: "Klee One", cursive;
+
+  margin-left: 20px !important;
+  border: 1px solid #efc7c2;
+}
+.teamparent {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1014%26quot%3b)' fill='none'%3e%3cpath d='M1440 0L850.65 0L1440 119.37z' fill='rgba(255%2c 255%2c 255%2c .1)'%3e%3c/path%3e%3cpath d='M850.65 0L1440 119.37L1440 269.92L532.78 0z' fill='rgba(255%2c 255%2c 255%2c .075)'%3e%3c/path%3e%3cpath d='M532.78 0L1440 269.92L1440 439.29L214.40999999999997 0z' fill='rgba(255%2c 255%2c 255%2c .05)'%3e%3c/path%3e%3cpath d='M214.40999999999985 0L1440 439.29L1440 521.1600000000001L166.95999999999987 0z' fill='rgba(255%2c 255%2c 255%2c .025)'%3e%3c/path%3e%3cpath d='M0 560L341.84 560L0 531.93z' fill='rgba(0%2c 0%2c 0%2c .1)'%3e%3c/path%3e%3cpath d='M0 531.93L341.84 560L814.8499999999999 560L0 471.53z' fill='rgba(0%2c 0%2c 0%2c .075)'%3e%3c/path%3e%3cpath d='M0 471.53L814.8499999999999 560L1121.52 560L0 231.82999999999998z' fill='rgba(0%2c 0%2c 0%2c .05)'%3e%3c/path%3e%3cpath d='M0 231.83000000000004L1121.52 560L1174.28 560L0 146.07000000000005z' fill='rgba(0%2c 0%2c 0%2c .025)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1014'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+  display: flex;
+  flex-direction: column;
+  background-color: #efc7c2;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  padding: 25px auto;
+  padding-bottom: 50px;
+  z-index: 0;
+}
+.instagram {
+  padding: 3px 5px;
+  width: 15px;
+  height: 15px;
+}
+.facebook {
+  padding: 3px 5px;
+  width: 15px;
+  height: 15px;
+}
+.twitter {
+  padding: 3px 5px;
+  width: 15px;
+  height: 15px;
+}
+.teami {
+  /* margin-top: 20px !important; */
+}
+.testimonialparent {
+  display: flex;
+  flex-direction: column;
+  background-color: #071013;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  /* padding: 25px auto;
+  padding-bottom: 50px; */
+}
+Carousel {
+  width: 100vw;
+  height: 100vh;
+}
+.testi1 {
+  display: flexbox;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin-bottom: 250px;
+}
+.testimg {
+  width: 200px !important;
+  height: 200px !important;
+  margin-right: 2px !important;
+}
+.testi1 h3 {
+  font-family: "Klee One", cursive !important;
+
+  color: #efc7c2;
+  font-size: 2rem;
+}
+.testi h5 {
+  font-family: "Klee One", cursive !important;
+
+  color: #071013;
+  font-size: 1.4rem;
+}
+.footer {
+  padding: 25px;
+  color: #efc7c2;
+  background-color: #071013;
+}
+.parentlink {
+  margin-top: 40px;
+}
+
+.linkf {
+  display: inline-block;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+.moref {
+  display: inline-block;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin-right: 0;
+}
+.socialf {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 0;
+  padding-left: 0px !important;
+}
+.socialf li {
+  margin: 10px;
+}
+.addressf {
+  margin-top: 35px;
+  text-align: center;
+}
+.followf {
+  margin-top: 25px;
 }
